# sureflap-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: build.yml  docs.yml
public/: index.html
surehub_api/: logging.json  main.py
surehub_api/entities/: dto.py  enums.py  official.py  official_v2.py
surehub_api/routers/: devices.py  households.py  pets.py
surehub_api/services/: auth.py  dashboard.py  devices.py  households.py  pets.py  reports.py  timeline.py
surehub_api/utils/: http_utils.py  logger.py  response_handler.py
