[project]
name = "surehub-api"
version = "7.0.0"
description = "SureHub API is a simple, yet powerful RESTful API for products from Sure Petcare"
license = "Apache-2.0"
authors = [
    { name = "Fabian Eulitz", email = "dev@sustineo.de" },
]
keywords = ["SureHub", "Sure Petcare", "REST", "API"]
requires-python = ">=3.10"
dependencies = [
    "uvicorn>=0.42.0,<1.0.0",
    "dynaconf>=3.2.13,<4.0.0",
    "fastapi>=0.135.1,<1.0.0",
    "requests>=2.32.5,<3.0.0",
    "cachetools>=7.0.5,<8.0.0",
]

[project.urls]
repository = "https://github.com/fabieu/surehub-api"
documentation = "https://fabieu.github.io/surehub-api/"

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "vermin>=1.8.0,<2.0.0",
    "autopep8>=2.3.2,<3.0.0",
    "httpx>=0.28.1,<1.0.0",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
